runtime/tests/cases/variables/errors/save_redeclaration.bobbin
save score = 100
save score = 200
Your score is {score}.
